--- a/app/public/src/user/login.html
+++ b/app/public/src/user/login.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Đăng Nhập</title>
+    <title>Đăng Nhập User</title>
     <style>
         body {
     font-family: Arial, sans-serif;
@@ -43,7 +43,7 @@ button {
 <body>
 
     <form id="loginForm">
-        <h2>Đăng Nhập</h2>
+        <h2>Đăng Nhập User</h2>
         <input type="username" id="username" placeholder="Username" required>
         <input type="password" id="password" placeholder="Mật khẩu" required>
         <button type="submit">Đăng Nhập</button>
@@ -56,7 +56,7 @@ button {
             const username = document.getElementById('username').value;
             const password = document.getElementById('password').value;
 
-            const response = await fetch('http://localhost:3000/api/login', {
+            const response = await fetch('http://localhost:3000/api/loginUser', {
                 method: 'POST',
                 headers: { 'Content-Type': 'application/json' },
                 body: JSON.stringify({ username, password })
